--- a/package.json
+++ b/package.json
@@ -3,9 +3,26 @@
   "version": "1.0.0",
   "description": "First ever attempt at a dedicated game engine",
   "private": true,
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
+  },
   "scripts": {
     "dev": "webpack serve --config ./webpack/webpack-dev.config.js --port 8080",
-    "build": "webpack --config ./webpack/webpack.config.js"
+    "build": "webpack --config ./webpack/webpack.config.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,14 +41,18 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^7.15.0",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "lodash": "^4.17.20"
   }
 }
